--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -55,16 +55,8 @@
     border-bottom: 1px solid $border-color;
   }
 
-  /*p, li, dl {
+  p, li, dl {
     font-size: 1em;
-  }*/
-   
-  p {
-    font-size: 1em;
-  }
-   
-  li, dl {
-     font-size: $type-size-6;
   }
 
   /* paragraph indents */
